ellipsis fixed for too long class names

--- a/src/components/Planning/PlanningClassesTable/styles.css
+++ b/src/components/Planning/PlanningClassesTable/styles.css
@@ -158,7 +158,6 @@
 }
 
 .class-title-container {
-  overflow: hidden;
   max-width: 15rem;
 }
 
@@ -167,4 +166,5 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  display: block;
 }
